@@ -32,17 +32,25 @@ public class LinkedDataServer {
 
     private void loadTemplate() {
         try {
-            Path templatePath = Paths.get("templates", "pokemon.html");
-            if (Files.exists(templatePath)) {
-                htmlTemplate = Files.readString(templatePath);
+            // Try to load from resources first
+            var classLoader = getClass().getClassLoader();
+            var templateUrl = classLoader.getResource("templates/pokemon.html");
+            
+            if (templateUrl != null) {
+                htmlTemplate = new String(Files.readAllBytes(Paths.get(templateUrl.toURI())));
+                logger.info("Loaded HTML template from resources");
             } else {
-                // Create templates directory if it doesn't exist
-                Files.createDirectories(Paths.get("templates"));
-                // Write the default template
-                Files.writeString(templatePath, buildDefaultTemplate());
-                htmlTemplate = buildDefaultTemplate();
+                // Try to load from file system
+                Path templatePath = Paths.get("src/main/resources/templates/pokemon.html");
+                if (Files.exists(templatePath)) {
+                    htmlTemplate = Files.readString(templatePath);
+                    logger.info("Loaded HTML template from file system");
+                } else {
+                    logger.warn("HTML template not found, using default template");
+                    htmlTemplate = buildDefaultTemplate();
+                }
             }
-        } catch (IOException e) {
+        } catch (Exception e) {
             logger.error("Error loading HTML template:", e);
             htmlTemplate = buildDefaultTemplate();
         }
@@ -58,7 +66,7 @@ public class LinkedDataServer {
         // Set up CORS headers
         Spark.before((request, response) -> {
             response.header("Access-Control-Allow-Origin", "*");
-            response.header("Access-Control-Allow-Methods", "GET,POST,OPTIONS");
+            response.header("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS");
             response.header("Access-Control-Allow-Headers", 
                           "Content-Type,Authorization,X-Requested-With,Content-Length,Accept,Origin");
         });
@@ -93,173 +101,175 @@ public class LinkedDataServer {
     }
 
     private String createRdfResponse(String resourceUri) {
-        Model description = fetchRdfDescription(resourceUri);
-        if (description.isEmpty()) {
-            return "# Resource not found";
-        }
-        
-        StringWriter writer = new StringWriter();
-        RDFDataMgr.write(writer, description, Lang.TURTLE);
-        return writer.toString();
-    }
+      String query = 
+          "CONSTRUCT { <" + resourceUri + "> ?p ?o . " +
+          "            ?s pokemon:evolvesFrom <" + resourceUri + "> . " +
+          "            <" + resourceUri + "> pokemon:evolvesFrom ?prev }" +
+          "WHERE { " +
+          "  { <" + resourceUri + "> ?p ?o } " +
+          "  UNION " +
+          "  { ?s pokemon:evolvesFrom <" + resourceUri + "> } " +
+          "  UNION " +
+          "  { <" + resourceUri + "> pokemon:evolvesFrom ?prev } " +
+          "}";
+
+      try (QueryExecution qexec = QueryExecutionFactory.create(query, dataset)) {
+          Model description = qexec.execConstruct();
+          if (description.isEmpty()) {
+              return "# Resource not found";
+          }
+          StringWriter writer = new StringWriter();
+          RDFDataMgr.write(writer, description, Lang.TURTLE);
+          return writer.toString();
+      }
+  }
 
     private Map<String, Object> fetchPokemonData(String resourceUri) {
-      String query = 
-          "PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>\n" +
-          "PREFIX pokemon: <http://example.org/pokemon/>\n" +
-          "PREFIX schema: <http://schema.org/>\n" +
-          "PREFIX owl: <http://www.w3.org/2002/07/owl#>\n" +
-          "SELECT DISTINCT ?name ?id ?primaryType ?secondaryType ?height ?weight " +
-          "?category ?japaneseName ?romajiName ?dbpedia ?wikidata\n" +
-          "WHERE {\n" +
-          "  BIND(<" + resourceUri + "> AS ?pokemon)\n" +
-          "  ?pokemon schema:name ?name ;\n" +
-          "          schema:identifier ?id ;\n" +
-          "          pokemon:primaryType ?primaryType ;\n" +
-          "          schema:height ?height ;\n" +
-          "          schema:weight ?weight ;\n" +
-          "          pokemon:category ?category .\n" +
-          "  OPTIONAL { ?pokemon pokemon:secondaryType ?secondaryType }\n" +
-          "  OPTIONAL { ?pokemon pokemon:japaneseName ?japaneseName }\n" +
-          "  OPTIONAL { ?pokemon pokemon:romajiName ?romajiName }\n" +
-          "  OPTIONAL { ?pokemon owl:sameAs ?dbpedia .\n" +
-          "            FILTER(CONTAINS(STR(?dbpedia), 'dbpedia.org')) }\n" +
-          "  OPTIONAL { ?pokemon owl:sameAs ?wikidata .\n" +
-          "            FILTER(CONTAINS(STR(?wikidata), 'wikidata.org')) }\n" +
-          "}\n";
+        String query = 
+            "PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>\n" +
+            "PREFIX pokemon: <http://example.org/pokemon/>\n" +
+            "PREFIX schema: <http://schema.org/>\n" +
+            "PREFIX owl: <http://www.w3.org/2002/07/owl#>\n" +
+            "SELECT DISTINCT ?name ?id ?primaryType ?secondaryType ?height ?weight " +
+            "?category ?japaneseName ?romajiName ?dbpedia ?wikidata\n" +
+            "WHERE {\n" +
+            "  BIND(<" + resourceUri + "> AS ?pokemon)\n" +
+            "  ?pokemon schema:name ?name ;\n" +
+            "          schema:identifier ?id ;\n" +
+            "          pokemon:primaryType ?primaryType ;\n" +
+            "          schema:height ?height ;\n" +
+            "          schema:weight ?weight ;\n" +
+            "          pokemon:category ?category .\n" +
+            "  OPTIONAL { ?pokemon pokemon:secondaryType ?secondaryType }\n" +
+            "  OPTIONAL { ?pokemon pokemon:japaneseName ?japaneseName }\n" +
+            "  OPTIONAL { ?pokemon pokemon:romajiName ?romajiName }\n" +
+            "  OPTIONAL { ?pokemon owl:sameAs ?dbpedia .\n" +
+            "            FILTER(CONTAINS(STR(?dbpedia), 'dbpedia.org')) }\n" +
+            "  OPTIONAL { ?pokemon owl:sameAs ?wikidata .\n" +
+            "            FILTER(CONTAINS(STR(?wikidata), 'wikidata.org')) }\n" +
+            "}\n";
 
-      Map<String, Object> data = new HashMap<>();
-      try (QueryExecution qexec = QueryExecutionFactory.create(query, dataset)) {
-          ResultSet results = qexec.execSelect();
-          if (results.hasNext()) {
-              QuerySolution solution = results.nextSolution();
-              data.put("name", solution.getLiteral("name").getString());
-              data.put("id", solution.getLiteral("id").getString());
-              data.put("primaryType", solution.getLiteral("primaryType").getString());
-              data.put("height", formatDecimal(solution.getLiteral("height").getDouble()));
-              data.put("weight", formatDecimal(solution.getLiteral("weight").getDouble()));
-              data.put("category", solution.getLiteral("category").getString());
-              
-              if (solution.contains("secondaryType")) {
-                  data.put("secondaryType", solution.getLiteral("secondaryType").getString());
-              }
-              if (solution.contains("japaneseName")) {
-                  data.put("japaneseName", solution.getLiteral("japaneseName").getString());
-              }
-              if (solution.contains("romajiName")) {
-                  data.put("romajiName", solution.getLiteral("romajiName").getString());
-              }
-              if (solution.contains("dbpedia")) {
-                  data.put("dbpediaLink", solution.getResource("dbpedia").getURI());
-              }
-              if (solution.contains("wikidata")) {
-                  data.put("wikidataLink", solution.getResource("wikidata").getURI());
-              }
-          }
-      }
-      
-      // Add evolution chain data
-      if (!data.isEmpty()) {
-          addEvolutionData(data, resourceUri);
-      }
-      return data;
-  }
+        Map<String, Object> data = new HashMap<>();
+        try (QueryExecution qexec = QueryExecutionFactory.create(query, dataset)) {
+            ResultSet results = qexec.execSelect();
+            if (results.hasNext()) {
+                QuerySolution solution = results.nextSolution();
+                data.put("name", solution.getLiteral("name").getString());
+                data.put("id", solution.getLiteral("id").getString());
+                data.put("primaryType", solution.getLiteral("primaryType").getString());
+                data.put("height", formatDecimal(solution.getLiteral("height").getDouble()));
+                data.put("weight", formatDecimal(solution.getLiteral("weight").getDouble()));
+                data.put("category", solution.getLiteral("category").getString());
+                
+                if (solution.contains("secondaryType")) {
+                    data.put("secondaryType", solution.getLiteral("secondaryType").getString());
+                }
+                if (solution.contains("japaneseName")) {
+                    data.put("japaneseName", solution.getLiteral("japaneseName").getString());
+                }
+                if (solution.contains("romajiName")) {
+                    data.put("romajiName", solution.getLiteral("romajiName").getString());
+                }
+                if (solution.contains("dbpedia")) {
+                    data.put("dbpediaLink", solution.getResource("dbpedia").getURI());
+                }
+                if (solution.contains("wikidata")) {
+                    data.put("wikidataLink", solution.getResource("wikidata").getURI());
+                }
 
-  private String formatDecimal(double value) {
-      return String.format("%.1f", value);
-  }
-  
-  private void addEvolutionData(Map<String, Object> data, String resourceUri) {
-      // Query for previous evolution
-      String prevQuery = 
-          "PREFIX pokemon: <http://example.org/pokemon/>\n" +
-          "PREFIX schema: <http://schema.org/>\n" +
-          "SELECT ?name ?id WHERE {\n" +
-          "  <" + resourceUri + "> pokemon:evolvesFrom ?prev .\n" +
-          "  ?prev schema:name ?name ;\n" +
-          "        schema:identifier ?id .\n" +
-          "}\n";
-          
-      try (QueryExecution qexec = QueryExecutionFactory.create(prevQuery, dataset)) {
-          ResultSet results = qexec.execSelect();
-          if (results.hasNext()) {
-              QuerySolution solution = results.nextSolution();
-              Map<String, String> prevPokemon = new HashMap<>();
-              prevPokemon.put("name", solution.getLiteral("name").getString());
-              prevPokemon.put("id", solution.getLiteral("id").getString());
-              data.put("prevPokemon", prevPokemon);
-          }
-      }
-
-      // Query for next evolution
-      String nextQuery = 
-          "PREFIX pokemon: <http://example.org/pokemon/>\n" +
-          "PREFIX schema: <http://schema.org/>\n" +
-          "SELECT ?name ?id WHERE {\n" +
-          "  ?next pokemon:evolvesFrom <" + resourceUri + "> ;\n" +
-          "        schema:name ?name ;\n" +
-          "        schema:identifier ?id .\n" +
-          "}\n";
-          
-      try (QueryExecution qexec = QueryExecutionFactory.create(nextQuery, dataset)) {
-          ResultSet results = qexec.execSelect();
-          if (results.hasNext()) {
-              QuerySolution solution = results.nextSolution();
-              Map<String, String> nextPokemon = new HashMap<>();
-              nextPokemon.put("name", solution.getLiteral("name").getString());
-              nextPokemon.put("id", solution.getLiteral("id").getString());
-              data.put("nextPokemon", nextPokemon);
-          }
-      }
-  }
-
-    // private void addExternalLinks(Map<String, Object> data, String resourceUri) {
-    //     String query = "PREFIX owl: <http://www.w3.org/2002/07/owl#>\n" +
-    //                   "PREFIX schema: <http://schema.org/>\n" +
-    //                   "SELECT ?dbpedia ?wikidata WHERE {\n" +
-    //                   "  <" + resourceUri + "> owl:sameAs ?dbpedia, ?wikidata .\n" +
-    //                   "  FILTER(CONTAINS(STR(?dbpedia), 'dbpedia.org'))\n" +
-    //                   "  FILTER(CONTAINS(STR(?wikidata), 'wikidata.org'))\n" +
-    //                   "}";
-                      
-    //     try (QueryExecution qexec = QueryExecutionFactory.create(query, dataset)) {
-    //         ResultSet results = qexec.execSelect();
-    //         if (results.hasNext()) {
-    //             QuerySolution solution = results.next();
-    //             data.put("dbpediaLink", solution.getResource("dbpedia").getURI());
-    //             data.put("wikidataLink", solution.getResource("wikidata").getURI());
-    //         }
-    //     }
-    // }
-
-    private Model fetchRdfDescription(String resourceUri) {
-        String constructQuery = "CONSTRUCT { <" + resourceUri + "> ?p ?o .\n" +
-                              "            ?s pokemon:evolvesFrom <" + resourceUri + "> .\n" +
-                              "            <" + resourceUri + "> pokemon:evolvesFrom ?prev }\n" +
-                              "WHERE {\n" +
-                              "  { <" + resourceUri + "> ?p ?o }\n" +
-                              "  UNION\n" +
-                              "  { ?s pokemon:evolvesFrom <" + resourceUri + "> }\n" +
-                              "  UNION\n" +
-                              "  { <" + resourceUri + "> pokemon:evolvesFrom ?prev }\n" +
-                              "}";
-
-        try (QueryExecution qexec = QueryExecutionFactory.create(constructQuery, dataset)) {
-            return qexec.execConstruct();
+                // Add evolution chain data
+                addEvolutionData(data, resourceUri);
+            }
         }
+        
+        return data;
+    }
+
+    private void addEvolutionData(Map<String, Object> data, String resourceUri) {
+        // Query for previous evolution
+        String prevQuery = 
+            "PREFIX pokemon: <http://example.org/pokemon/>\n" +
+            "PREFIX schema: <http://schema.org/>\n" +
+            "SELECT ?name ?id WHERE {\n" +
+            "  <" + resourceUri + "> pokemon:evolvesFrom ?prev .\n" +
+            "  ?prev schema:name ?name ;\n" +
+            "        schema:identifier ?id .\n" +
+            "}\n";
+            
+        try (QueryExecution qexec = QueryExecutionFactory.create(prevQuery, dataset)) {
+            ResultSet results = qexec.execSelect();
+            if (results.hasNext()) {
+                QuerySolution solution = results.nextSolution();
+                Map<String, String> prevPokemon = new HashMap<>();
+                prevPokemon.put("name", solution.getLiteral("name").getString());
+                prevPokemon.put("id", solution.getLiteral("id").getString());
+                data.put("prevPokemon", prevPokemon);
+            }
+        }
+
+        // Query for next evolution
+        String nextQuery = 
+            "PREFIX pokemon: <http://example.org/pokemon/>\n" +
+            "PREFIX schema: <http://schema.org/>\n" +
+            "SELECT ?name ?id WHERE {\n" +
+            "  ?next pokemon:evolvesFrom <" + resourceUri + "> ;\n" +
+            "        schema:name ?name ;\n" +
+            "        schema:identifier ?id .\n" +
+            "}\n";
+            
+        try (QueryExecution qexec = QueryExecutionFactory.create(nextQuery, dataset)) {
+            ResultSet results = qexec.execSelect();
+            if (results.hasNext()) {
+                QuerySolution solution = results.nextSolution();
+                Map<String, String> nextPokemon = new HashMap<>();
+                nextPokemon.put("name", solution.getLiteral("name").getString());
+                nextPokemon.put("id", solution.getLiteral("id").getString());
+                data.put("nextPokemon", nextPokemon);
+            }
+        }
+    }
+
+    private String formatDecimal(double value) {
+        return String.format("%.1f", value);
     }
 
     private String renderTemplate(Map<String, Object> data) {
-        String html = htmlTemplate;
+        String result = htmlTemplate;
+
+        // Handle simple properties
         for (Map.Entry<String, Object> entry : data.entrySet()) {
             String placeholder = "${" + entry.getKey() + "}";
-            html = html.replace(placeholder, String.valueOf(entry.getValue()));
+            if (!(entry.getValue() instanceof Map)) {
+                result = result.replace(placeholder, String.valueOf(entry.getValue()));
+            }
         }
-        return html;
+
+        // Handle previous pokemon
+        @SuppressWarnings("unchecked")
+        Map<String, String> prevPokemon = (Map<String, String>) data.get("prevPokemon");
+        String prevSection = prevPokemon != null ?
+            "<a href=\"/resource/" + prevPokemon.get("id") + "\" class=\"pokemon-card\">" +
+            "<h3>" + prevPokemon.get("name") + "</h3>" +
+            "<p>#" + prevPokemon.get("id") + "</p>" +
+            "</a>" +
+            "<span class=\"evolution-arrow\">→</span>" : "";
+        result = result.replace("${prevPokemonSection}", prevSection);
+
+        // Handle next pokemon
+        @SuppressWarnings("unchecked")
+        Map<String, String> nextPokemon = (Map<String, String>) data.get("nextPokemon");
+        String nextSection = nextPokemon != null ?
+            "<span class=\"evolution-arrow\">→</span>" +
+            "<a href=\"/resource/" + nextPokemon.get("id") + "\" class=\"pokemon-card\">" +
+            "<h3>" + nextPokemon.get("name") + "</h3>" +
+            "<p>#" + nextPokemon.get("id") + "</p>" +
+            "</a>" : "";
+        result = result.replace("${nextPokemonSection}", nextSection);
+
+        return result;
     }
 
     public void stop() {
         Spark.stop();
-        logger.info("Linked Data interface stopped");
     }
 }
